@@ -35,6 +35,7 @@ import de.unihalle.informatik.Alida.exceptions.ALDOperatorException.OperatorExce
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage.MTBImageType;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImageDouble;
+import de.unihalle.informatik.MiToBo.core.datatypes.wrapper.MTBBooleanData;
 
 /**
  * 2D Matched filter.
@@ -72,7 +73,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "\u03C3 of Gaussian", required = false, dataIOOrder=2,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "Std. deviation of Gaussian.")
-	protected Double gaussStdDev = new Double(2.0);
+	protected Double gaussStdDev = Double.valueOf(2.0);
 
 	/**
 	 * Height of the filter mask.
@@ -82,7 +83,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Mask Height", required = false, dataIOOrder = 3,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
     description = "Height of the filter mask.")	
-	protected Integer height = new Integer(9);
+	protected Integer height = Integer.valueOf(9);
 
 	/**
 	 * Flag to invert filter mask.
@@ -94,7 +95,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Invert Mask", required = false, dataIOOrder = 5,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "If true, filter mask is inverted.")
-	protected boolean invertMask = false;
+	protected MTBBooleanData invertMask = new MTBBooleanData(false);
 
 	/**
 	 * Flag to normalize sum of kernel elements to zero.
@@ -102,7 +103,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	@Parameter( label= "Normalize Mask", required = false, dataIOOrder = 4,
 		direction= Parameter.Direction.IN, mode=ExpertMode.STANDARD, 
 	  description = "If true, mask is normalized to a sum of zero.")
-	protected boolean normalizeMask = true;
+	protected MTBBooleanData normalizeMask = new MTBBooleanData(true);
 
 	/**
 	 * Default constructor.
@@ -125,6 +126,28 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 			throw new ALDOperatorException(OperatorExceptionType.VALIDATION_FAILED, 
 				"[ChaudhuriMatchedFilter2D] mask height is smaller than 3, " +
 					"please set it to a larger value!");
+	}
+
+	@Override
+	public ChaudhuriMatchedFilter2D clone() {
+		ChaudhuriMatchedFilter2D newOp;
+		try {
+			newOp = new ChaudhuriMatchedFilter2D();
+			// super class fields
+			newOp.inputImg = this.inputImg;
+			newOp.angle = this.angle;
+			newOp.mode = this.mode;
+			newOp.paddingVariant = this.paddingVariant;
+			newOp.statusListeners = this.statusListeners;
+			// local fields
+			newOp.gaussStdDev = this.gaussStdDev;
+			newOp.height = this.height;
+			newOp.invertMask = this.invertMask;
+			newOp.normalizeMask = this.normalizeMask;
+			return newOp;
+		} catch (ALDOperatorException e) {
+			return null;
+		}
 	}
 
 	/**
@@ -167,7 +190,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 				}
 				else {
 					double val = - Math.exp( -x_orig * x_orig / 	(2 * sigma * sigma ));
-					if (this.invertMask)
+					if (this.invertMask.getValue())
 						val = val * -1;
 					kernelImg.putValueDouble(x+kernelSizeHalf, y+kernelSizeHalf, val);
 					nonNullMask[x+kernelSizeHalf][y+kernelSizeHalf] = true;
@@ -177,7 +200,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 			}
 		}
 		// subtract mean value
-		if (this.normalizeMask) {
+		if (this.normalizeMask.getValue()) {
 			kernelMean = kernelMean / kernelCount;
 			for (int x = 0; x < kernelSize; ++x) {
 				for (int y = 0; y < kernelSize; ++y) {
@@ -195,7 +218,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	 * @param s		Standard deviation {@latex.inline $\\sigma$}.
 	 */
 	public void setStandardDeviation(double s) {
-		this.gaussStdDev = new Double(s);
+		this.gaussStdDev = Double.valueOf(s);
 	}
 
 	/**
@@ -203,7 +226,7 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	 * @param h		Height of mask.
 	 */
 	public void setHeight(int h) {
-		this.height = new Integer(h);
+		this.height = Integer.valueOf(h);
 	}
 	
 	/**
@@ -211,21 +234,45 @@ public class ChaudhuriMatchedFilter2D extends OrientedFilter2D {
 	 * @param b		Flag for inversion.
 	 */
 	public void setInvertMask(boolean b) {
-		this.invertMask = b;
+		this.invertMask = new MTBBooleanData(b);
+	}
+
+	/** 
+	 * Enable or disable mask inversion.
+	 * <p>
+	 * Using this method with MiToBo wrapper datatypes instead of passing over
+	 * directly a boolean preserves consistency in the processing history.
+	 * 
+	 * @param m		Value for the mask inversion flag.
+	 */
+	public void setInvertMask(MTBBooleanData m) {
+		this.invertMask = m;
 	}
 
 	/**
 	 * Enable kernel normalization.
 	 */
 	public void enableNormalization() {
-		this.normalizeMask = true;
+		this.normalizeMask = new MTBBooleanData(true);
 	}
 
 	/**
 	 * Disable kernel normalization.
 	 */
 	public void disableNormalization() {
-		this.normalizeMask = false;
+		this.normalizeMask = new MTBBooleanData(false);
+	}
+	
+	/** 
+	 * Enable or disable kernel normalization.
+	 * <p>
+	 * Using this method with MiToBo wrapper datatypes instead of passing over
+	 * directly a boolean preserves consistency in the processing history.
+	 * 
+	 * @param kn	Value for the kernel normalization flag.
+	 */
+	public void setKernelNormalization(MTBBooleanData kn) {
+		this.normalizeMask = kn;
 	}
 }
 
