@@ -26,13 +26,16 @@ package de.unihalle.informatik.MiToBo.tools.interactive;
 
 import java.awt.BorderLayout;
 import java.awt.Color;
+import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.awt.event.MouseMotionListener;
 import java.awt.geom.Point2D;
+import java.io.File;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -43,20 +46,24 @@ import java.util.regex.Pattern;
 
 import javax.swing.JButton;
 import javax.swing.JFrame;
+import javax.swing.JLabel;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
+import javax.swing.JTextField;
 
 import de.unihalle.informatik.Alida.annotations.ALDAOperator;
 import de.unihalle.informatik.Alida.annotations.Parameter;
 import de.unihalle.informatik.Alida.annotations.Parameter.ParameterModificationMode;
 import de.unihalle.informatik.Alida.annotations.ALDAOperator.Level;
 import de.unihalle.informatik.Alida.datatypes.ALDDirectoryString;
+import de.unihalle.informatik.Alida.exceptions.ALDException;
 import de.unihalle.informatik.Alida.exceptions.ALDOperatorException;
 import de.unihalle.informatik.Alida.operator.ALDOperator;
+import de.unihalle.informatik.Alida.operator.events.ALDOperatorExecutionProgressEvent;
 import de.unihalle.informatik.MiToBo.core.datatypes.MTBRegion2D;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage;
 import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImage.MTBImageType;
-import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImageByte;
+import de.unihalle.informatik.MiToBo.core.datatypes.images.MTBImageShort;
 import de.unihalle.informatik.MiToBo.core.operator.MTBOperator;
 import de.unihalle.informatik.MiToBo.io.dirs.DirectoryTree;
 import de.unihalle.informatik.MiToBo.io.images.ImageReaderMTB;
@@ -84,10 +91,25 @@ import ij.process.ImageProcessor;
  * 
  * @author Birgit Moeller
  */
-@ALDAOperator(genericExecutionMode=ALDAOperator.ExecutionMode.SWING, 
+@ALDAOperator(genericExecutionMode=ALDAOperator.ExecutionMode.ALL, 
 	level=Level.APPLICATION, allowBatchMode = false)
 public class LabelImageEditor extends MTBOperator 
 		implements MouseListener, MouseMotionListener, ActionListener {
+
+	/**
+	 * Class identifier.
+	 */
+	private static final String classID = "[LabelImageEditor]";
+
+	/**
+	 * Maximal border width default value.
+	 */
+	private static final int defaultMaxBorderWidth = 7;
+
+	/**
+	 * Default width of freehand border lines.
+	 */
+	private static final int defaultDrawLineWidth = 3;
 
 	/**
 	 * Image directory to process.
@@ -118,6 +140,14 @@ public class LabelImageEditor extends MTBOperator
 	private ALDDirectoryString outputDir = null;
 
 	/**
+	 * Optional output file suffix.
+	 */
+	@Parameter(label = "Output file ending", required = false, 
+		direction = Parameter.Direction.IN, description = "Output file ending.",
+		dataIOOrder = 2)
+	private String outFileEnding = "-edited.tif";
+
+	/**
 	 * Main window frame.
 	 */
 	private JFrame mainFrame;
@@ -128,9 +158,14 @@ public class LabelImageEditor extends MTBOperator
 	private ImageCanvas ic;
 	
 	/**
+	 * Original image currently under processing.
+	 */
+	private MTBImage originalImage;
+
+	/**
 	 * Image currently under processing.
 	 */
-	private MTBImageByte activeImage;
+	private MTBImageShort activeImage;
 	
 	/**
 	 * Reference to currently active image.
@@ -197,6 +232,21 @@ public class LabelImageEditor extends MTBOperator
 	private Point2D.Double lastPathPoint;
 	
 	/**
+	 * Window for setting some options and configuration parameters.
+	 */
+	private JFrame optionsFrame;
+	
+	/**
+	 * Text field with current maximal border width.
+	 */
+	private JTextField optionsBorderMaxWidth;
+	
+	/**
+	 * Text field with current width of lines when drawing boundaries.
+	 */
+	private JTextField optionsDrawLineWidth;
+	
+	/**
 	 * Default constructor.
 	 * @throws ALDOperatorException Thrown if construction fails.
 	 */
@@ -210,6 +260,10 @@ public class LabelImageEditor extends MTBOperator
 	@Override
 	protected void operate() 
 			throws ALDOperatorException {
+
+		this.fireOperatorExecutionProgressEvent(
+				new ALDOperatorExecutionProgressEvent(this, classID 
+					+ "... editor is ready to go!"));
 
 		// (re-)init operator
 		this.activePlus = null;
@@ -240,8 +294,15 @@ public class LabelImageEditor extends MTBOperator
 			p = Pattern.compile(this.inputRegExp);
 		for (String f: files) {
 
+			// skip Alida history files
+			if (f.endsWith(".ald"))
+				continue;
+
 			if (this.verbose.booleanValue())
 				System.out.println("Processing image " + f + "...");
+			this.fireOperatorExecutionProgressEvent(
+					new ALDOperatorExecutionProgressEvent(this, classID 
+						+ " processing image " + f + "..."));
 			
 			// if file name does not match filter, skip it
 			if (p != null) {
@@ -255,14 +316,17 @@ public class LabelImageEditor extends MTBOperator
 				// read input image
 				reader.setFileName(f);
 				reader.runOp();
-				this.activeImage = 
-						(MTBImageByte)reader.getResultMTBImage().convertType(
-								MTBImageType.MTB_BYTE, true);
+				this.originalImage = reader.getResultMTBImage();
+				this.activeImage = (MTBImageShort)this.originalImage.convertType(
+								MTBImageType.MTB_SHORT, true);
 				
 				// init frame with first image
 				if (this.activePlus == null) {
 					this.initMainFrame();
 				}
+				
+				// init the options window
+				this.initOptionsFrame();
 				
 				this.mainFrame.setTitle(this.activeImage.getTitle());
 				this.activeProcessor = this.activeImage.getImagePlus().getProcessor();
@@ -277,7 +341,6 @@ public class LabelImageEditor extends MTBOperator
 					Thread.sleep(100);
 				}
 				if (this.finished) {
-					System.out.println("Finished!");
 					return;
 				}
 			} catch (Exception e) {
@@ -299,6 +362,7 @@ public class LabelImageEditor extends MTBOperator
 	 */
 	@Override
 	public void mouseClicked(MouseEvent e) {
+		
 		// get mouse position in image 
 		int mx = this.ic.offScreenX(e.getX());
 		int my = this.ic.offScreenY(e.getY());
@@ -306,19 +370,43 @@ public class LabelImageEditor extends MTBOperator
 		// get label at click position
 		int label = this.activeProcessor.getPixel(mx, my);
 		
+		int onmask = InputEvent.META_DOWN_MASK;
+    if ((e.getModifiersEx() & onmask) == onmask) {
+  		this.fireOperatorExecutionProgressEvent(
+  				new ALDOperatorExecutionProgressEvent(this, classID 
+  					+ " -> registered mouse-click, meta key is down!"));
+    }
+		
+    boolean fillInRegion = false;
+    if (label == 0 && IJ.shiftKeyDown() && IJ.controlKeyDown()) {
+  		this.fireOperatorExecutionProgressEvent(
+  				new ALDOperatorExecutionProgressEvent(this, classID 
+  					+ " -> registered mouse-click, shift and control keys down, " 
+  						+ "preparing to fill region..."));
+			fillInRegion = true;
+		}
+    
 		// ignore clicks to the background except in memory mode
 		// => filling in background regions is allowed
-		if (label == 0 && !this.memoryMode)
+		if ( label == 0 && !( this.memoryMode || fillInRegion ))
 			return;
 		
-		if (IJ.shiftKeyDown()) {
+		if (IJ.shiftKeyDown() && !IJ.controlKeyDown()) {
+  		this.fireOperatorExecutionProgressEvent(
+  				new ALDOperatorExecutionProgressEvent(this, classID 
+  					+ " -> registered mouse-click, shift key down, control key up, " 
+  						+ "preparing to join regions..."));
 			this.memoryMode = true;
 			this.lastLabel = label;
 			return;
 		}
 
 		boolean newLabel = false;
-		if (IJ.controlKeyDown()) {
+		if (IJ.controlKeyDown() && !IJ.shiftKeyDown()) {
+  		this.fireOperatorExecutionProgressEvent(
+  				new ALDOperatorExecutionProgressEvent(this, classID 
+  					+ " -> registered mouse-click, control key down, shift key up, " 
+  						+ "preparing to assign new label..."));
 			newLabel = true;
 		}
 		
@@ -341,13 +429,13 @@ public class LabelImageEditor extends MTBOperator
 			for (int y=0; y<this.activeProcessor.getHeight();++y) {
 				for (int x=0; x<this.activeProcessor.getWidth();++x) {
 					clabel = this.activeProcessor.getPixel(x, y);
-					labels.add(new Integer(clabel));
+					labels.add(Integer.valueOf(clabel));
 					if (clabel > maxLabel)
 						maxLabel = clabel;
 				}
 			}
 			for (int nl = maxLabel; nl > 0; --nl) {
-				if (labels.contains(new Integer(nl)))
+				if (labels.contains(Integer.valueOf(nl)))
 					continue;
 				for (int y=0; y<this.activeProcessor.getHeight();++y) {
 					for (int x=0; x<this.activeProcessor.getWidth();++x) {
@@ -359,6 +447,29 @@ public class LabelImageEditor extends MTBOperator
 			}
 			newLabel = false;
 		}
+		// fill-in the clicked (background) region
+		else if (fillInRegion) {
+
+			// determine new label to assign
+			int clabel;
+			int maxLabel = 0;
+			TreeSet<Integer> labels = new TreeSet<>();
+			for (int y=0; y<this.activeProcessor.getHeight();++y) {
+				for (int x=0; x<this.activeProcessor.getWidth();++x) {
+					clabel = this.activeProcessor.getPixel(x, y);
+					labels.add(Integer.valueOf(clabel));
+					if (clabel > maxLabel)
+						maxLabel = clabel;
+				}
+			}
+			// search for next free label to assign
+			for (int nl = maxLabel; nl > 0; --nl) {
+				if (labels.contains(Integer.valueOf(nl)))
+					continue;
+				labelNeighbors(this.activeProcessor, mx, my, nl);
+			}
+		}
+		// remove the clicked region
 		else {
 			for (int y=0; y<this.activeProcessor.getHeight();++y) {
 				for (int x=0; x<this.activeProcessor.getWidth();++x) {
@@ -374,6 +485,54 @@ public class LabelImageEditor extends MTBOperator
 		this.ic.repaint();
 	}
 
+	/**
+	 * Recursively label neighbors until approaching next region. 
+	 * 
+	 * @param ip		Image processor to modify.
+	 * @param px		Position in x where to start.
+	 * @param py		Position in y where to start.
+	 * @param label	Label to assign to new region.
+	 */
+	private static void labelNeighbors(ImageProcessor ip, 
+			int px, int py, int label) {
+		
+		int borderWidth = 3;
+		
+		// if pixel is already labeled, it is not of interest for us
+		if (ip.getPixel(px, py) != 0)
+			return;
+		
+		int nx = -1, ny = -1;
+		// check all neighbors
+		for (int dy=-borderWidth; dy<=borderWidth; ++dy) {
+			for (int dx=-borderWidth; dx<=borderWidth; ++dx) {
+				nx = px+dx;
+				ny = py+dy;
+				if (nx<0 || nx>=ip.getWidth() || ny<0 || ny>=ip.getHeight()) 
+					continue;
+				// if we have foreign neighbors, cancel further processing
+				if (ip.getPixel(nx, ny) != 0 && ip.getPixel(nx, ny) != label) {
+					return;
+				}
+			}
+		}
+		// there are no foreign neighbors => label pixel
+		ip.putPixel(px, py, label);
+		for (int dy=-borderWidth; dy<=borderWidth; ++dy) {
+			for (int dx=-borderWidth; dx<=borderWidth; ++dx) {
+				// skip pixel itself
+				if (dx==0 && dy==0)
+					continue;
+				nx = px+dx;
+				ny = py+dy;
+				if (nx<0 || nx>=ip.getWidth() || ny<0 || ny>=ip.getHeight()) 
+					continue;
+				// continue recursively
+				labelNeighbors(ip, nx, ny, label);
+			}
+		}
+	}
+	
 	@Override
 	public void mousePressed(MouseEvent e) {
 		
@@ -416,6 +575,16 @@ public class LabelImageEditor extends MTBOperator
 			int mx = this.ic.offScreenX(e.getX());
 			int my = this.ic.offScreenY(e.getY());
 			
+			// get line width from options window
+			int lineWidth = defaultDrawLineWidth;
+			try {
+				int w = Integer.parseInt(this.optionsDrawLineWidth.getText());
+				lineWidth = w;
+			}
+			catch (Exception exp) {
+				// if there is any problem, just ignore...
+			}
+			this.activeProcessor.setLineWidth(lineWidth);
 			this.activeProcessor.drawLine(
 					(int)this.lastPathPoint.x, (int)this.lastPathPoint.y, mx, my);
 			this.lastPathPoint.x = mx;
@@ -470,6 +639,15 @@ public class LabelImageEditor extends MTBOperator
 
 			// run over the image and search for background pixels having two or 
 			// more components with the same label in their neighborhood
+			int neighborhoodSize = (int)(defaultMaxBorderWidth/2.0);
+			try {
+				int maxWidth = Integer.parseInt(this.optionsBorderMaxWidth.getText());
+				neighborhoodSize = (int)(maxWidth/2.0);
+			}
+			catch (Exception exp) {
+				// if there is any problem, just ignore...
+			}
+			int neighborhoodPixelNum = (2*neighborhoodSize + 1) * (2*neighborhoodSize + 1);
 			for (int y=0; y<this.activeProcessor.getHeight();++y) {
 				for (int x=0; x<this.activeProcessor.getWidth();++x) {
 					int label = this.activeProcessor.getPixel(x, y);
@@ -477,8 +655,8 @@ public class LabelImageEditor extends MTBOperator
 						continue;
 
 					labels.clear();
-					for (int dy = -1; dy <= 1; ++dy) {
-						for (int dx = -1; dx <= 1; ++dx) {
+					for (int dy = -neighborhoodSize; dy <= neighborhoodSize; ++dy) {
+						for (int dx = -neighborhoodSize; dx <= neighborhoodSize; ++dx) {
 							if (dx == 0 && dy == 0)
 								continue;
 							if (   x+dx >= 0 && x+dx < this.activeImage.getSizeX()
@@ -486,15 +664,15 @@ public class LabelImageEditor extends MTBOperator
 								nLabel = this.activeProcessor.getPixel(x+dx,  y+dy);
 								if (nLabel == 0)
 									continue;
-								labels.add(new Integer(nLabel));
+								labels.add(Integer.valueOf(nLabel));
 							}						
 						}
 					}
 					if (labels.size() == 1) {
 						int count = 0;
 						label = labels.first().intValue();
-						for (int dy = -1; dy <= 1; ++dy) {
-							for (int dx = -1; dx <= 1; ++dx) {
+						for (int dy = -neighborhoodSize; dy <= neighborhoodSize; ++dy) {
+							for (int dx = -neighborhoodSize; dx <= neighborhoodSize; ++dx) {
 								if (dx == 0 && dy == 0)
 									continue;
 								if (   x+dx >= 0 && x+dx < this.activeImage.getSizeX()
@@ -504,7 +682,7 @@ public class LabelImageEditor extends MTBOperator
 								}
 							}
 						}
-						if (count > 4) 
+						if (count > neighborhoodPixelNum/2) 
 							this.activeProcessor.putPixel(x, y, label);
 					}
 				}
@@ -517,9 +695,9 @@ public class LabelImageEditor extends MTBOperator
 		// relabel image
 		else if (c.equals("relabel")) {
 			
-			MTBImageByte binImage = 
-					(MTBImageByte)this.activeImage.duplicate().convertType(
-							MTBImageType.MTB_BYTE, true);
+			MTBImageShort binImage = 
+					(MTBImageShort)this.activeImage.duplicate().convertType(
+							MTBImageType.MTB_SHORT, true);
 			binImage.fillBlack();
 			for (int y=0; y<this.activeProcessor.getHeight();++y) {
 				for (int x=0; x<this.activeProcessor.getWidth();++x) {
@@ -564,8 +742,9 @@ public class LabelImageEditor extends MTBOperator
 				int width = this.activeProcessor.getWidth();
 				
 				// background image with boundaries and holes in white
-				MTBImageByte backImage = 
-					(MTBImageByte)this.activeImage.duplicate();
+				MTBImageShort backImage = 
+					(MTBImageShort)this.activeImage.duplicate().convertType(
+							MTBImageType.MTB_SHORT, true);
 				backImage.fillBlack();
 				for (int y=0; y<height;++y) {
 					for (int x=0; x<width;++x) {
@@ -580,12 +759,12 @@ public class LabelImageEditor extends MTBOperator
 				bm.setMask(BasicMorphology.maskShape.CIRCLE, 1);
 				bm.setMode(opMode.ERODE);
 				bm.runOp();
-				backImage = (MTBImageByte)bm.getResultImage();
+				backImage = (MTBImageShort)bm.getResultImage();
 				bm.setInImg(backImage);
 				bm.setMask(BasicMorphology.maskShape.CIRCLE, 1);
 				bm.setMode(opMode.DILATE);
 				bm.runOp();
-				backImage = (MTBImageByte)bm.getResultImage();
+				backImage = (MTBImageShort)bm.getResultImage();
 				
 				// label hole regions
 				LabelComponentsSequential lop = 
@@ -605,7 +784,7 @@ public class LabelImageEditor extends MTBOperator
 								y = (int)(p.y+dy);
 								if (x >= 0 && x < width && y>= 0 && y < height) {
 									if (this.activeProcessor.getPixelValue(x, y) > 0)
-										neighborLabels.add(new Integer(
+										neighborLabels.add(Integer.valueOf(
 											(int)this.activeProcessor.getPixelValue(x, y)));
 								}
 							}							
@@ -641,10 +820,20 @@ public class LabelImageEditor extends MTBOperator
 		// save the current processing result and close the frame
 		else if (c.equals("quit")) {
 			this.saveFile();
-			this.stillActive = false; 
+			this.stillActive = false;
+			this.optionsFrame.setVisible(false);
+			this.optionsFrame.dispose();
 			this.mainFrame.setVisible(false);
 			this.mainFrame.dispose();
 			this.finished = true;
+		}
+		// open window with options
+		else if (c.equals("options")) {
+			this.optionsFrame.setVisible(true);
+		}
+		// open window with options
+		else if (c.equals("optionsOk")) {
+			this.optionsFrame.setVisible(false);
 		}
 	}
 	
@@ -703,6 +892,12 @@ public class LabelImageEditor extends MTBOperator
 		undo.setActionCommand("undo");
 		undo.setMnemonic(KeyEvent.VK_U);
 		buttons.add(undo);
+		JButton options = new JButton("Options");
+		options.addActionListener(this);
+		options.setToolTipText("Configuration options.");
+		options.setActionCommand("options");
+		options.setMnemonic(KeyEvent.VK_O);
+		buttons.add(options);
 		JButton quit = new JButton("Quit");
 		quit.addActionListener(this);
 		quit.setToolTipText("Save current image and quit the editor.");
@@ -727,6 +922,49 @@ public class LabelImageEditor extends MTBOperator
 	}
 	
 	/**
+	 * Initialize the options window.
+	 */
+	private void initOptionsFrame() {
+		
+		// main window
+		this.optionsFrame = new JFrame();
+		this.optionsFrame.setTitle("LabelImageEditor - Options");
+		this.optionsFrame.setLayout(new BorderLayout());
+		
+		JPanel paramPanel = new JPanel();
+		paramPanel.setLayout(new GridLayout(2,2));
+
+		// border max width for configuring neighborhood size in fix borders
+		JPanel labelPanel = new JPanel();
+		JLabel label = new JLabel("Maximal border width:");
+		label.setToolTipText("Maximal width of boundaries, used in fixing boundaries.");
+		labelPanel.add(label);
+		paramPanel.add(labelPanel);
+		this.optionsBorderMaxWidth = new JTextField(String.valueOf(defaultMaxBorderWidth));
+		paramPanel.add(this.optionsBorderMaxWidth);
+		// width of line when drawing new borders
+		labelPanel = new JPanel();
+		label = new JLabel("Drawing width:");
+		label.setToolTipText("Line width for drawing new freehand boundaries.");
+		labelPanel.add(label);
+		paramPanel.add(labelPanel);
+		this.optionsDrawLineWidth = new JTextField(String.valueOf(defaultDrawLineWidth));
+		paramPanel.add(this.optionsDrawLineWidth);
+		
+		this.optionsFrame.add(paramPanel, BorderLayout.CENTER);
+		
+		JPanel buttons = new JPanel();
+		JButton optionsOk = new JButton("Ok");
+		optionsOk.addActionListener(this);
+		optionsOk.setToolTipText("Close the options window.");
+		optionsOk.setActionCommand("optionsOk");
+		buttons.add(optionsOk);
+		this.optionsFrame.add(buttons, BorderLayout.SOUTH);
+		
+		this.optionsFrame.setSize(350, 120);
+	}
+	
+	/**
 	 * Optimize visibility by shifting labels into 
 	 * upper part of gray-scale range.
 	 * 
@@ -738,7 +976,7 @@ public class LabelImageEditor extends MTBOperator
 		TreeSet<Integer> labels = new TreeSet<>();
 		for (int y=0; y<ip.getHeight();++y) {
 			for (int x=0; x<ip.getWidth();++x) {
-				labels.add(new Integer(ip.getPixel(x, y)));
+				labels.add(Integer.valueOf(ip.getPixel(x, y)));
 			}
 		}
 		LinkedList<Integer> sortedLabels = new LinkedList<>();
@@ -754,13 +992,13 @@ public class LabelImageEditor extends MTBOperator
 		
 		// check range of available intensity values
 		int max = (int)this.activeImage.getTypeMax();
-		int min = (int)(max * 2.0 / 3.0);			
+		int min = (int)(max * 1.0 / 3.0);			
 		int step = (max - min) / labels.size();
 
 		int n = 0, newLabel;
 		for (Integer i: sortedLabels) {
 			newLabel = max - n * step;
-			labelMap.put(i, new Integer(newLabel));
+			labelMap.put(i, Integer.valueOf(newLabel));
 			++n;
 		}
 		
@@ -769,7 +1007,7 @@ public class LabelImageEditor extends MTBOperator
 				int label = ip.getPixel(x, y);
 				if (label == 0)
 					continue;
-				newLabel = labelMap.get(new Integer(label)).intValue();
+				newLabel = labelMap.get(Integer.valueOf(label)).intValue();
 				ip.putPixel(x, y, newLabel);
 			}
 		}
@@ -779,12 +1017,39 @@ public class LabelImageEditor extends MTBOperator
 	 * Saves the current processing result.
 	 */
 	private void saveFile() {
-		MTBImage newLabelImage = MTBImage.createMTBImage(this.activePlus);
+		MTBImage newLabelImage = this.originalImage.duplicate();
+		newLabelImage.fillBlack();
+		for (int y=0; y<newLabelImage.getSizeY(); ++y) {
+			for (int x=0; x<newLabelImage.getSizeX(); ++x) {
+				newLabelImage.putValueInt(x, y, this.activePlus.getProcessor().getPixel(x, y));
+			}
+		}
+
+		// relabel image to ensure consecutive labels
+		try {
+			LabelComponentsSequential lop = 
+				new LabelComponentsSequential(newLabelImage, false);
+			lop.runOp();
+
+			// Hack: make sure to preserve calibration information
+			newLabelImage = this.originalImage.duplicate();
+			for (int y=0; y<newLabelImage.getSizeY(); ++y) {
+				for (int x=0; x<newLabelImage.getSizeX(); ++x) {
+					newLabelImage.putValueInt(x, y, lop.getLabelImage().getValueInt(x, y));
+				}
+			}
+
+		} catch (ALDException aoe) {
+			System.out.println("-> relabeling failed, skipping step...");
+			aoe.printStackTrace();
+		}
+
 		String withoutPath = 
-				this.currentFile.substring(this.currentFile.lastIndexOf("/")+1);
+				this.currentFile.substring(this.currentFile.lastIndexOf(File.separator)+1);
 		String withoutEnding = 
 				withoutPath.substring(0, withoutPath.lastIndexOf("."));
-		String nf = this.internalOutputDir + "/" + withoutEnding + "-edited.tif";
+		String nf = 
+			this.internalOutputDir + File.separator + withoutEnding	+ this.outFileEnding;
 		ImageWriterMTB iw;
 		try {
 			if (this.verbose.booleanValue())
@@ -828,5 +1093,4 @@ public class LabelImageEditor extends MTBOperator
     	e.printStackTrace();
     }
 	}
-
 }
